--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	},
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"scripts": {
 		"build": "tsc -p tsconfig.prod.json",
 		"test": "exit 0"
