--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"files": [
-		"dist"
+		"dist",
+		"components.d.ts",
+		"components.js"
 	],
 	"scripts": {
 		"build": "tsc -p tsconfig.prod.json",
@@ -34,7 +36,7 @@
 		"react": "^16 || ^17"
 	},
 	"dependencies": {
-		"react-tree-reconciler": "^1.1.1"
+		"react-tree-reconciler": "^1.2.0"
 	},
 	"config": {
 		"commitizen": {
