--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
 	"displayName": "react-vscode",
 	"description": "React for VSCode",
 	"version": "0.0.0-development",
+	"author": "Gustaf Räntilä",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/grantila/react-vscode/issues"
+	},
+	"homepage": "https://github.com/grantila/react-vscode#readme",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/grantila/react-vscode"
+	},
 	"engines": {
 		"node": ">=12",
 		"vscode": "^1.57.0"
